--- a/index.css
+++ b/index.css
@@ -44,51 +44,98 @@ grid-template-columns:repeat(1,1fr); */
  height: 40vh;
  width:41vw ;
  background-color: white;
- margin-top: 4.26vh;
+ border-radius: 10px;
+ border: 1px solid #EDEDED;
+ margin-top: 2.4vh;
  margin-bottom: 5vh;
  display:grid ;
+ opacity: 1;
+ 
  /* align-items: center; */
  
 }
 .left-second-container-inner{
-    
-
-  background-color: aqua;
+    color: #3D087B;
+    position: relative;
+    opacity: 1;
+   display: flex;
+   align-items: center;
 
 }
 .left-second-container-option{
     display: inline-block;
-    position: relative;
-    top: -27px;
+    
+   
+
+    
    
    
 }
 #div1{
     width: 6vw;
-    height: 12vh;
+    height: 5vh;
     display: inline-block;
     background-image: url(./Assets/wake_up.svg);
     background-repeat: no-repeat;
     background-position: center;
+    margin-right: 10px;
+    
+   
+}
+#div2{
+    width: 6vw;
+    height: 5vh;
+    display: inline-block;
+    background-image: url(./Assets/lunch_time.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 10px;
+    
+   
+}
+#div3{
+    width: 6vw;
+    height: 5vh;
+    display: inline-block;
+    background-image: url(./Assets/nap_time.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 10px;
     
    
 }
 #wakeUpTimeSelector{
-    font-size: 22px;
+    font-size: 18px;
     border: 1px solid gray;
     margin-left: 30px;
-    width: 200px;
+    width: 240px;
+    height: 45px;
+    color: #3D087B;
+   
+    border:1px solid rgb(128, 128, 128,0.5);
+    border-radius: 4px;
+    background-color: #ffffff;
+    
 }
 
 
 
 #set-time{
     width: 22vw;
-    height: 7vh;
+    height: 8vh;
     background-color: white;
-   
+    background-image:  linear-gradient(113deg, #6E54EC 0%, #CB52F8 40%, #FC5EFF 81%, #F1A7C5 100%);
+    border-radius: 4px;
+    opacity: 1;
+    font-size:20px;
+    text-align: center;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    padding-top: 12px;
     }
-
+#set-time:hover{
+    background-image:  linear-gradient(280deg, #6E54EC 0%, #CB52F8 40%, #FC5EFF 81%, #F1A7C5 100%) 
+}
 .grid-container2{
     width: 47.5%;
     height: 100%px;
@@ -98,12 +145,87 @@ grid-template-columns:repeat(1,1fr); */
     width: 100%;
     height: 22vh;
     background-color: white;
- 
     margin-bottom: 7vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center ;
+    font-size: 16px;
+    border:1px solid #EDEDED ;
+    border-radius: 10px;
+    color: #3D087B;
+    padding:0px 30px;
+    position: relative;
+    
 }
+#clock11{
+font-size: 25px;
+
+
+}
+#clock2{
+width: 80px;
+height: 90px;
+background-image:url(./Assets/timeline.svg) ;
+font-size: 18px;
+text-align: center;
+letter-spacing: 0px;
+color: #8A11BF;
+padding-top: 8px;
+/* font-family: barlow; */
+
+
+
+}
+#hours{
+    font-size: 40px;
+ 
+    
+  
+}
+#hourText{
+/* position: absolute;
+font-size: 18px;
+top: 50px; */
+}
+#clockAmpm{
+    width: 80px;
+height: 90px;
+background-image:url(./Assets/AM_svg.svg) ;
+font-size: 18px;
+text-align: center;
+letter-spacing: 0px;
+color:white;
+padding-top: 8px;
+}
+.lb1{
+ 
+    width: 80%;
+    background-color: white;
+    position: absolute;
+    top: 10px;
+    height: 22vh;
+    z-index: -1;
+    opacity: 0.71;
+    border-radius: 10px;
+    
+}
+.lb2{
+ 
+    width: 70%;
+    background-color: white;
+    position: absolute;
+    top: 20px;
+    height: 22vh;
+    z-index: -2;
+    opacity: 0.22;
+    border-radius: 10px;
+    
+}
+
 #right-bottom-container{
     background-color: white;
-    
     width: 39VW;
-    height: 50vh;
+    height: 70vh;
+    border-radius: 10px;
+    background-image: url(./Assets/lunch_image.svg);
 }
