--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
 *{
     box-sizing: border-box;
-    font-family: "manrope","sans-serif"; 
+    
    
     /* link need to added */
 }
 body{
     margin: 0px;
+   font-family: 'Manrope', sans-serif;
+
+    
 }
 
 .main-container{
@@ -21,20 +24,16 @@ flex-wrap: wrap;
 display: grid;
 width: 45%;
 height: 80%;
-/* 
-grid-template-columns:repeat(1,1fr); */
-/* grid-gap: 20px 20px;} */}
-
-.grid-item{
 
 }
+
 #clock-pic{
     background-image:url(./Assets/clock_logo.png);
     background-size:100% 100% ;
     width: 21vw;
     height: 14vh;
-    margin-top: 2vw;
-    margin-bottom: 4vw;
+    margin-top: 2vh;
+    margin-bottom: 10.5vh;
    
 
 }
@@ -47,12 +46,9 @@ grid-template-columns:repeat(1,1fr); */
  border-radius: 10px;
  border: 1px solid #EDEDED;
  margin-top: 2.4vh;
- margin-bottom: 5vh;
+ margin-bottom: 3.5vh;
  display:grid ;
  opacity: 1;
- 
- /* align-items: center; */
- 
 }
 .left-second-container-inner{
     color: #3D087B;
@@ -60,16 +56,13 @@ grid-template-columns:repeat(1,1fr); */
     opacity: 1;
    display: flex;
    align-items: center;
+   font-family: 'Manrope', sans-serif;
 
 }
 .left-second-container-option{
     display: inline-block;
-    
    
 
-    
-   
-   
 }
 #div1{
     width: 6vw;
@@ -78,9 +71,7 @@ grid-template-columns:repeat(1,1fr); */
     background-image: url(./Assets/wake_up.svg);
     background-repeat: no-repeat;
     background-position: center;
-    margin-right: 10px;
-    
-   
+    margin-right: 10px;  
 }
 #div2{
     width: 6vw;
@@ -90,8 +81,6 @@ grid-template-columns:repeat(1,1fr); */
     background-repeat: no-repeat;
     background-position: center;
     margin-right: 10px;
-    
-   
 }
 #div3{
     width: 6vw;
@@ -101,8 +90,6 @@ grid-template-columns:repeat(1,1fr); */
     background-repeat: no-repeat;
     background-position: center;
     margin-right: 10px;
-    
-   
 }
 .divborder{
     width: 5px;
@@ -111,24 +98,19 @@ grid-template-columns:repeat(1,1fr); */
     position: relative;
     left: 41px;
     bottom: -44px;
-    
 }
 .timeSelector{
     font-size: 18px;
     border: 1px solid gray;
     margin-left: 30px;
-    width: 240px;
-    height: 45px;
+    width: 17vw;
+    height: 6vh;
     color: #3D087B;
-   
     border:1px solid rgb(128, 128, 128,0.5);
     border-radius: 4px;
     background-color: #ffffff;
-    
+    font-family: 'Manrope', sans-serif;
 }
-
-
-
 #set-time{
     width: 22vw;
     height: 8vh;
@@ -140,15 +122,16 @@ grid-template-columns:repeat(1,1fr); */
     text-align: center;
     letter-spacing: 0px;
     color: #FFFFFF;
-    padding-top: 12px;
+    padding-top: 14px;
+    margin-bottom: 3.5vh;
     }
 #set-time:hover{
     background-image:  linear-gradient(280deg, #6E54EC 0%, #CB52F8 40%, #FC5EFF 81%, #F1A7C5 100%) 
 }
 .grid-container2{
     width: 47.5%;
-    height: 100%px;
-    
+    height: 100%;
+   
 }
 #digital-clock{
     width: 100%;
@@ -164,12 +147,14 @@ grid-template-columns:repeat(1,1fr); */
     color: #3D087B;
     padding:0px 30px;
     position: relative;
-    
+}
+#clockTime{
+   font-family: 'Manrope', sans-serif;
+   padding-right: 30px;
+
 }
 .clock11{
 font-size: 25px;
-
-
 }
 .clock2{
 width: 80px;
@@ -180,21 +165,7 @@ text-align: center;
 letter-spacing: 0px;
 color: #8A11BF;
 padding-top: 8px;
-/* font-family: barlow; */
-
-
-
-}
-#hours{
-    
- 
-    
-  
-}
-#hourText{
-/* position: absolute;
-font-size: 18px;
-top: 50px; */
+font-family: 'Barlow', sans-serif;
 }
 #clockAmpm{
     width: 80px;
@@ -205,52 +176,80 @@ text-align: center;
 letter-spacing: 0px;
 color:white;
 padding-top: 8px;
+font-family: 'Barlow', sans-serif;
+
+
 }
 .lb1{
- 
-    width: 80%;
-    background-color: white;
-    position: absolute;
-    top: 10px;
-    height: 22vh;
-    z-index: -1;
-    opacity: 0.71;
-    border-radius: 10px;
-    
+width: 80%;
+background-color: white;
+position: absolute;
+top: 10px;
+height: 22vh;
+z-index: -1;
+opacity: 0.71;
+border-radius: 10px;  
 }
 .lb2{
- 
-    width: 70%;
-    background-color: white;
-    position: absolute;
-    top: 20px;
-    height: 22vh;
-    z-index: -2;
-    opacity: 0.22;
-    border-radius: 10px;
-    
+width: 70%;
+background-color: white;
+position: absolute;
+top: 20px;
+height: 22vh;
+z-index: -2;
+opacity: 0.22;
+border-radius: 10px; 
 }
 
 #right-bottom-container{
-    background-color: white;
-    width: 39VW;
-    height: 70vh;
-    border-radius: 10px;
-    background-image: url(./Assets/normal.jpg);
-    /* background-position: 50% 80%; */
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y:bottom;
-    
+background-color: white;
+width: 39VW;
+height: 70vh;
+border-radius: 10px;
+background-image: url(./Assets/normal.jpg);
+background-repeat: no-repeat;
+background-position-x: center;
+background-position-y:bottom; 
 }
 #text-container{
-    font-size: 34px;
-    padding-left: 24px;
-    padding-top: 32px;
-    color: #8E53F0;
+font-size: 34px;
+padding-left: 24px;
+padding-top: 32px;
+color: #8E53F0;
+font-weight: 900;
+letter-spacing: 38;
+
+
+
 }
-#dynamic-block{
-    width: 41vw;
-    height: 10vh;
-    background-color: yellow;
+#dynamic-block1{
+width: 41vw;
+background-color: #A11BFC;
+height: 5vh;
+border-top-left-radius: 10px;
+border-top-right-radius: 10px;
+color: white;
+font-size: 18px;
+padding-left: 10px;
+padding-top: 10px;
+}
+#dynamic-block2{
+width: 41vw;
+height: 5vh;
+background-color: #A11BFC;
+font-size: 18px;
+padding-left: 10px;
+padding-top: 5px;
+color: white;
+}
+#dynamic-block3{
+width: 41vw;
+height: 5vh;
+background-color: #A11BFC;
+border-bottom-left-radius: 10px;
+border-bottom-right-radius: 10px;
+font-size: 18px;
+padding-left: 10px;
+color: white;
+padding-bottom: 10px;  
 }
